--- a/01_evaluation_pipeline.ipynb
+++ b/01_evaluation_pipeline.ipynb
@@ -80,11 +80,78 @@
     "                            tokenizer: typing.Union[str, ForwardRef('PreTrainedTokenizer'), NoneType] = None,\n",
     "                            strategy: typing.Literal['simple', 'bootstrap'] = 'simple',\n",
     "                            confidence_level: float = 0.95,\n",
-    "                            n_resamples: int = 9999device: int = None,\n",
+    "                            n_resamples: int = 9999,\n",
+    "                            device: int = None,\n",
     "                            random_state: typing.Optional[int] = None,\n",
     "                            input_column: str = 'text',\n",
     "                            label_column: str = 'label',\n",
     "                            generation_kwargs: dict = None )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "language_tested = [\"en\", \"de\", \"cs\", \"is\", \"zh\", \"ru\"]\n",
+    "evaluated_metrics = [\"accuracy\", \"recall\", \"precision\", \"bleu\", \"rouge\",  \"bert_score\", \"meteor\", \"perplexity\", \"comet\", \"bleurt\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# WMT dataset loading\n",
+    "ds = load_dataset(\"haoranxu/WMT23-Test\", \"{language1}-{language1}\")\n",
+    "\n",
+    "# FLORES 200 dataset laoding\n",
+    "ds = load_dataset(\"haoranxu/FLORES-200\", \"{language1}-{language1}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preprocessing function to adapt depending on dataset and article\n",
+    "source_lang = \"en\"\n",
+    "target_lang = \"fr\"\n",
+    "prefix = \"translate English to French: \"\n",
+    "\n",
+    "\n",
+    "def preprocess_function(examples):\n",
+    "    inputs = [prefix + example[source_lang] for example in examples[\"translation\"]]\n",
+    "    targets = [example[target_lang] for example in examples[\"translation\"]]\n",
+    "    model_inputs = tokenizer(inputs, text_target=targets, max_length=128, truncation=True)\n",
+    "    return model_inputs\n",
+    "\n",
+    "tokenized_ds = ds.map(preprocess_function, batched=True) # -> Voir si ne  peux pas être inclus dans la pipeline\n",
+    "data_collator = DataCollatorForSeq2Seq(tokenizer=tokenizer, model=checkpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "translation_evaluator = evaluator(\"translation\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluator = evaluate.TranslationEvaluator(model_or_pipeline=...,\n",
+    "                                          data = ds,\n",
+    "                                          metric = evaluate.combine(evaluated_metrics),\n",
+    ")"
    ]
   },
   {
