Add Bloom LLM model for evaluation

--- a/01_evaluation_pipeline_WIP_DB.ipynb
+++ b/01_evaluation_pipeline_WIP_DB.ipynb
@@ -125,7 +125,11 @@
     "    \"Qwen/Qwen2.5-7B-Instruct-GPTQ-Int8\",\n",
     "    # Mistral Instruct\n",
     "    \"mistralai/Mistral-7B-Instruct-v0.3\",\n",
-    "] # TODO mistral 7B, Bloom 7B, OPT 7B, MPT 7B, Bayling (?)\n",
+    "    # Bloom \n",
+    "    \"bigscience/bloomz-1b7\",\n",
+    "    \"bigscience/bloomz-3b\",\n",
+    "    \"bigscience/bloomz-7b1\"\n",
+    "]\n",
     "\n",
     "ds_available = [\"haoranxu/WMT23-Test\",\n",
     "                \"openlanguagedata/flores_plus\"]"
@@ -396,7 +400,7 @@
     "        preds.extend(tslt)\n",
     "    return preds\n",
     "\n",
-    "#################################   Mistral\n",
+    "#################################   Mistral Instruct\n",
     "\n",
     "\n",
     "def get_input_targets_Mistral(dataset, source_lang, target_lang):\n",
@@ -437,6 +441,48 @@
     "    preds = []\n",
     "    for i in tqdm(range(len(inputs)//batch_size)):\n",
     "        tslt = translate_list_of_str_Mistral(inputs[i*batch_size : (i+1)*batch_size], tokenizer, model, target_language)\n",
+    "        preds.extend(tslt)\n",
+    "    return preds\n",
+    "\n",
+    "#################################   Causal Model (BLOOM + MISTRAL (Normal))\n",
+    "language_name = {\"en\": \"English\", \"de\": \"German\", \"ru\": \"Russian\", \"is\": \"Islandic\", \"zh\": \"Chinese\", \"cs\": \"Czech\"}\n",
+    "\n",
+    "def get_input_targets_CausalLM(dataset, source_lang, target_lang):\n",
+    "    source_lang_name = language_name[source_lang]\n",
+    "    target_lang_name = language_name[target_lang]\n",
+    "    # Use base formulation \"Translate this from Chinese to English:\\nChinese: 我爱机器翻译。\\nEnglish:\"\n",
+    "    sources = [example[source_lang] for example in dataset[f\"{source_lang}-{target_lang}\"]]\n",
+    "    inputs = [(\n",
+    "        f\"Translate from {source_lang_name} to {target_lang_name}:\"\n",
+    "        + f\"\\n{source_lang_name}: {example.get(source_lang)} \\n{target_lang_name}:\")\n",
+    "        for example in dataset[f\"{source_lang}-{target_lang}\"]]\n",
+    "    targets = [example[target_lang] for example in dataset[f\"{source_lang}-{target_lang}\"]]\n",
+    "    return sources, inputs, targets\n",
+    "\n",
+    "def translate_list_of_str_CausalLM(list_str, tokenizer, model):\n",
+    "    \"\"\"\n",
+    "    Returns a list containing str corresponding to translation of the inputted\n",
+    "    \"\"\"\n",
+    "    with torch.no_grad():\n",
+    "        inputs = tokenizer(list_str, return_tensors=\"pt\", padding=True)\n",
+    "        output_sequences = model.generate(inputs[\"input_ids\"].to(device),\n",
+    "                                    num_beams=5, \n",
+    "                                    max_new_tokens=512, \n",
+    "                                    do_sample=True,\n",
+    "                                    temperature=0.6, \n",
+    "                                    top_p=0.9\n",
+    "                                    ).cpu()\n",
+    "        \n",
+    "        input_length = inputs[\"input_ids\"].shape[1]\n",
+    "        # Decode only the generated portion of the output\n",
+    "        generated_text = tokenizer.batch_decode(output_sequences[:, input_length:], skip_special_tokens=True)\n",
+    "    return generated_text\n",
+    "\n",
+    "def translate_batched_CausalLM(inputs, model, tokenizer, batch_size):\n",
+    "    \n",
+    "    preds = []\n",
+    "    for i in tqdm(range(len(inputs)//batch_size)):\n",
+    "        tslt = translate_list_of_str_ALMA(inputs[i*batch_size : (i+1)*batch_size], tokenizer, model)\n",
     "        preds.extend(tslt)\n",
     "    return preds"
    ]
@@ -489,7 +535,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5bedb4a6e38340b99c3c2bec9059af7f",
+       "model_id": "ec46cea40ae440d4a67b4a8db8d664dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -503,7 +549,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a04860df9a54201be2c0827705e8757",
+       "model_id": "00e8a12fdb8b4545a7422b4a4868a726",
        "version_major": 2,
        "version_minor": 0
       },
@@ -517,7 +563,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad6dcd023a0f4705a1598b52b48f25c9",
+       "model_id": "9b74f136ae35480f932349092b3871ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -531,7 +577,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0752df7916d54b5cbc79f7fc93f9531a",
+       "model_id": "5734b2a5901745a39446d8648556be07",
        "version_major": 2,
        "version_minor": 0
       },
@@ -578,14 +624,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'transform_to_WNT_style' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m ds_flores_wnt_style \u001b[38;5;241m=\u001b[39m \u001b[43mtransform_to_WNT_style\u001b[49m(ds_flores, lang\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mde\u001b[39m\u001b[38;5;124m\"\u001b[39m, lang_start\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124men\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(ds_flores_wnt_style[\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m4\u001b[39m])\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'transform_to_WNT_style' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of samples: 1012\n",
+      "{'en-de': [{'de': '„Wir haben jetzt 4 Monate alte Mäuse, die Diabetes hatten und jetzt keinen mehr haben“, fügte er hinzu.', 'en': '\"We now have 4-month-old mice that are non-diabetic that used to be diabetic,\" he added.'}, {'de': 'Dr. Ehud Ur, Professor für Medizin an der Dalhousie University in Halifax, Nova Scotia, und Vorsitzender der Abteilung für Klinik und Wissenschaft des Kanadischen Diabetesverbands gab zu bedenken, dass die Forschungsarbeit noch in den Kinderschuhen stecke.', 'en': 'Dr. Ehud Ur, professor of medicine at Dalhousie University in Halifax, Nova Scotia and chair of the clinical and scientific division of the Canadian Diabetes Association cautioned that the research is still in its early days.'}, {'de': 'Wie einige andere Experten zeigte er sich skeptisch, ob es möglich sei, Diabetes zu heilen, und wies darauf hin, dass die Befunde für Menschen, die bereits unter Typ-1-Diabetes litten, keine Bedeutung hätten.', 'en': 'Like some other experts, he is skeptical about whether diabetes can be cured, noting that these findings have no relevance to people who already have Type 1 diabetes.'}, {'de': 'Am Montag gab Sara Danius, Ständige Sekretärin des Literaturnobelpreiskomitees der Schwedischen Akademie in einer Radiosendung auf Sveriges Radio in Schweden bekannt, dass das Komitee seine Bemühungen eingestellt habe, Bob Dylan über seine Ehrung mit dem Literaturnobelpreis für Literator zu informieren, nachdem es nicht gelungen war, ihn persönlich zu erreichen.', 'en': 'On Monday, Sara Danius, permanent secretary of the Nobel Committee for Literature at the Swedish Academy, publicly announced during a radio program on Sveriges Radio in Sweden the committee, unable to reach Bob Dylan directly about winning the 2016 Nobel Prize in Literature, had abandoned its efforts to reach him.'}]}\n"
      ]
     }
    ],
@@ -1350,7 +1393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Mistral 7B"
+    "### Mistral 7B Instruct"
    ]
   },
   {
@@ -1475,6 +1518,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### BLOOM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load base model and LoRA weights\n",
+    "bloom_tokenizer = transformers.AutoTokenizer.from_pretrained(\"bigscience/bloomz-7b1\", padding_side='left')\n",
+    "Q_config = BitsAndBytesConfig(load_in_8bit=True) \n",
+    "bloom_model = transformers.AutoModelForCausalLM.from_pretrained(\"bigscience/bloomz-7b1\", torch_dtype=\"auto\", device_map=device, quantization_config=Q_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sources, inputs, targets = get_input_targets_CausalLM(ds_wnt, source_lang=\"en\", target_lang=\"de\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "translate_list_of_str_CausalLM(inputs[0:5], bloom_tokenizer, bloom_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## General aggregation functions for benchmark"
    ]
   },
@@ -1553,7 +1633,20 @@
     "        model.generation_config.pad_token_id = tokenizer.pad_token_id\n",
     "        get_input_targets_fn = get_input_targets_Mistral\n",
     "        tslt_fn = translate_batched_Mistral\n",
-    "        \n",
+    "\n",
+    "    elif model_name == \"bloom\":\n",
+    "        if model_size in [\"1b7\", \"3b\"]:\n",
+    "            tokenizer = transformers.AutoTokenizer.from_pretrained(f\"bigscience/bloomz-{model_size}\")\n",
+    "            model =  transformers.AutoModelForCausalLM.from_pretrained(f\"bigscience/bloomz-{model_size}\", torch_dtype=\"auto\", device_map=device)\n",
+    "        elif model_size ==  \"7b1\":\n",
+    "            tokenizer = transformers.AutoTokenizer.from_pretrained(f\"bigscience/bloomz-{model_size}\")\n",
+    "            Q_config = BitsAndBytesConfig(load_in_8bit=True)\n",
+    "            model =  transformers.AutoModelForCausalLM.from_pretrained(f\"bigscience/bloomz-{model_size}\", torch_dtype=\"auto\", device_map=device, quantization_config=Q_config)\n",
+    "        else:\n",
+    "            raise ValueError(\"This size is not supported. The application waits one of these size [1b7, 3b, 7b1]\")\n",
+    "        get_input_targets_fn = get_input_targets_CausalLM\n",
+    "        tslt_fn = translate_batched_CausalLM\n",
+    "\n",
     "    return tokenizer, model, get_input_targets_fn, tslt_fn\n",
     "\n",
     "\n",
@@ -2703,6 +2796,11 @@
     "        with open(f\"./generated_translations/evaluations/{dataset_name}_{model_name}_{direction}.pkl\", \"wb\") as f:\n",
     "            pickle.dump(translation_pred, f, pickle.HIGHEST_PROTOCOL)\n",
     "        evaluation_all_direction[f\"{direction}\"] = evaluate_translation(sources, targets, translation_pred)\n",
+    "\n",
+    "        if not os.path.exists(f\"./results/evaluations\"):\n",
+    "            os.makedirs(f\"./results/evaluations\")\n",
+    "        with open(f\"./results/evaluations/eval_{dataset_name}_{model_name}_{direction}.pkl\", \"wb\") as f:\n",
+    "            pickle.dump(evaluation_all_direction, f, pickle.HIGHEST_PROTOCOL)\n",
     "    return evaluation_all_direction\n",
     "\n",
     "def eval_translation_general(directions, dataset_names, model_names, batch_size):\n",
