Add benchmark tables as csv

--- a/01_evaluation_pipeline_WIP_DB.ipynb
+++ b/01_evaluation_pipeline_WIP_DB.ipynb
@@ -2628,6 +2628,88 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Benchmarck table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import pickle\n",
+    "import os\n",
+    "\n",
+    "eval_directory = \"./evaluations/\"\n",
+    "models = [\"alma\",\"bloomz\",\"falcon3\",\"falcon3\",\"falcon3\",\"falcon3-mamba\",\"llama3\",\"llama3\",\"llama3\",\"mistral\",\"nllb\",\"opt-instruct\",\"qwen2.5\",\"qwen2.5\",\"qwen2.5\",\"qwen2.5\"]\n",
+    "models_sizes = [None,\"7B\",\"1B\",\"3B\",\"7B\",None,\"1B\",\"3B\",\"8B\",None,None,None,\"0.5B\",\"1.5B\",\"3B\",\"7B\"]\n",
+    "directions = [\"en-de\", \"de-en\",\n",
+    "              \"en-cs\", \"cs-en\",\n",
+    "              \"en-is\", \"is-en\",\n",
+    "              \"en-zh\", \"zh-en\",\n",
+    "              \"en-ru\", \"ru-en\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_metrics_per_model_direction_dataset(model_name, model_size, direction, dataset_name):\n",
+    "    if dataset_name == \"flores\":\n",
+    "        red_size = \"200\"\n",
+    "    elif dataset_name == \"wnt23\":\n",
+    "        red_size = \"100\"\n",
+    "    if model_size is not None:\n",
+    "        model_name+= f\"-{model_size}\"\n",
+    "    eval_file_name = eval_directory + f\"raw_{dataset_name}_{model_name}_{direction}_red-{red_size}.pkl\"\n",
+    "    \n",
+    "    with open(eval_file_name, \"rb\") as f:\n",
+    "        evaluation_pred = pickle.load(f)\n",
+    "    \n",
+    "    return evaluation_pred\n",
+    "\n",
+    "def extract_metrics_per_direction_dataset(direction, dataset_name):\n",
+    "    df_eval = pd.DataFrame()\n",
+    "    for model_name, model_size in zip(models, models_sizes):\n",
+    "        eval_dict = extract_metrics_per_model_direction_dataset(model_name,model_size,direction,dataset_name)\n",
+    "        eval_dict = dict(map(lambda kv: (kv[0], [kv[1][\"mean_score\"]]), eval_dict.items()))\n",
+    "        model_name_ = model_name if model_size is None else f\"{model_name}-{model_size}\"\n",
+    "        df_eval = pd.concat([df_eval, pd.DataFrame(eval_dict,index=[model_name_])])\n",
+    "\n",
+    "    return df_eval\n",
+    "\n",
+    "def load_evaluations_as_tables(output_directory=\"./results/evaluations_tables/\"):\n",
+    "    if not os.path.exists(output_directory):\n",
+    "        os.makedirs(output_directory)\n",
+    "    for dataset_name in ['wnt23','flores']:\n",
+    "        df_eval_list =[]\n",
+    "        for direction in directions:\n",
+    "            evaluation_file = output_directory + f\"eval_{dataset_name}_{direction}_all-models.csv\"\n",
+    "            df_eval = extract_metrics_per_direction_dataset(direction, dataset_name)\n",
+    "            df_eval_list.append(df_eval)\n",
+    "            df_eval.to_csv(evaluation_file)\n",
+    "        df_eval_avg = pd.concat(df_eval_list).groupby(level=0).mean()\n",
+    "        df_eval_avg.to_csv(output_directory+f\"eval_{dataset_name}_all-directions.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_evaluations_as_tables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
