--- a/01_evaluation_pipeline_WIP_DB.ipynb
+++ b/01_evaluation_pipeline_WIP_DB.ipynb
@@ -24,6 +24,24 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.path import Path\n",
+    "import matplotlib.patches as patches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import re\n",
+    "import pickle\n",
+    "import time\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.path import Path\n",
     "import matplotlib.patches as patches\n",
     "\n",
     "import torch\n",
@@ -43,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2171,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2261,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2313,52 +2331,65 @@
     "    data = data[\"mean_score\"]\n",
     "\n",
     "    # Generate plot categories\n",
-    "    for colors_per in list_colors_per:\n",
-    "        print(f\"Generating categories based {colors_per} type ('colors_per' param)...\")\n",
-    "        elem2cat = ({dataset_name: i for i, dataset_name in enumerate(datasets)} if colors_per == \"dataset\"\n",
-    "                    else {direction: i for i, direction in enumerate(directions)} if colors_per == \"direction\"\n",
-    "                    else {get_full_model_name(model_name, model_size): i for i, (model_name, model_size) in enumerate(zip(models, model_sizes))} if colors_per == \"model\"\n",
-    "                    else {})\n",
-    "        dataset_name2real_name = {\"wnt23\": \"WNT23\", \"flores\": \"FLORES+\"}\n",
-    "        dataset_name2real_name_and_reduction = {}\n",
-    "        for dataset_name, reduce_size in zip(datasets, reduce_sizes):\n",
-    "            dataset_name2real_name_and_reduction[dataset_name] = dataset_name2real_name[dataset_name] + f\" - reduct to {reduce_size} samples\"\n",
-    "        category_names = ([dataset_name2real_name_and_reduction[dataset_name] for dataset_name in datasets] if colors_per == \"dataset\"\n",
-    "                        else directions if colors_per == \"direction\"\n",
-    "                        else [get_full_model_name(model_name, model_size) for model_name, model_size in zip(models, model_sizes)] if colors_per == \"model\"\n",
-    "                        else [\"No category\"])\n",
-    "        category = []\n",
-    "        for dataset_name in datasets:\n",
-    "            for model_name, model_size in zip(models, model_sizes):\n",
-    "                for direction in directions:\n",
-    "                    if colors_per == \"dataset\":\n",
-    "                        category.append(elem2cat[dataset_name])\n",
-    "                    elif colors_per == \"direction\":\n",
-    "                        category.append(elem2cat[direction])\n",
-    "                    elif colors_per == \"model\":\n",
-    "                        category.append(elem2cat[get_full_model_name(model_name, model_size)])\n",
-    "                    else:\n",
-    "                        category.append(0)\n",
+    "    ## Precompute categories names\n",
+    "    print(f\"Generating categories based {list_colors_per} type ('list_colors_per' param)...\")\n",
+    "    #dataset2cat = {dataset_name: i for i, dataset_name in enumerate(datasets)} if \"dataset\" in list_colors_per else {}\n",
+    "    #direction2cat = {direction: i for i, direction in enumerate(directions)} if \"direction\" in list_colors_per else {}\n",
+    "    #model2cat = {get_full_model_name(model_name, model_size): i for i, (model_name, model_size) in enumerate(zip(models, model_sizes))} if \"model\" in list_colors_per else {}\n",
     "\n",
-    "        if colors is None:\n",
-    "            if colors_per == \"dataset\":\n",
-    "                colors = plt.cm.Accent.colors\n",
-    "            elif colors_per == \"direction\":\n",
-    "                colors = plt.cm.tab20.colors\n",
-    "            else:\n",
-    "                colors = plt.cm.Dark2.colors + plt.cm.tab10.colors[0:7] + plt.cm.tab10.colors[8:]\n",
+    "    dataset_name2real_name = {\"wnt23\": \"WNT23\", \"flores\": \"FLORES+\"}\n",
+    "    dataset_name2real_name_and_reduction = {}\n",
+    "    for dataset_name, reduce_size in zip(datasets, reduce_sizes):\n",
+    "        dataset_name2real_name_and_reduction[dataset_name] = dataset_name2real_name[dataset_name] + f\" - reduct to {reduce_size} samples\"\n",
+    "    category_names_data = [dataset_name2real_name_and_reduction[dataset_name] for dataset_name in datasets] if \"dataset\" in list_colors_per else []\n",
+    "    category_names_direction = directions if \"direction\" in list_colors_per else []\n",
+    "    category_names_models = [get_full_model_name(model_name, model_size) for model_name, model_size in zip(models, model_sizes)] if \"model\" in list_colors_per else []\n",
     "\n",
-    "        # Plot\n",
-    "        print(\"Plotting in parallel coordinates plot...\")\n",
-    "        n_datasets, n_directions, n_models = len(directions), len(models), len(datasets)\n",
-    "        parallelCoordinatesPlot(title = f\"Influence of {colors_per} on translation performances\",\n",
-    "                                N = n_datasets*n_directions*n_models,\n",
-    "                                data = data,\n",
-    "                                category = category,\n",
-    "                                category_names = category_names,\n",
-    "                                ynames = metrics_names,\n",
-    "                                colors=colors,\n",
-    "                                savepath=savepath)"
+    "    ## Generate all combinaisons of categories\n",
+    "    category_names = []\n",
+    "    for cat_data in (category_names_data if len(category_names_data)>0 else [\"\"]):\n",
+    "        is_text = len(category_names_data)>0 and (len(category_names_direction)>0 or len(category_names_models)>0)\n",
+    "        cat1 = cat_data + (\" - \" if is_text else \"\")\n",
+    "        for cat_model in (category_names_models if len(category_names_models)>0 else [\"\"]):\n",
+    "            is_text = len(category_names_models)>0 and len(category_names_direction)>0\n",
+    "            cat2 = cat1 + cat_model + (\" - \" if is_text else \"\")\n",
+    "            for cat_dir in (category_names_direction if len(category_names_direction)>0 else [\"\"]):\n",
+    "                cat3 = cat2 + cat_dir\n",
+    "                category_names.append(cat3)\n",
+    "    elem2cat = {cat_name: i for i, cat_name in enumerate(category_names)}\n",
+    "    print(elem2cat)\n",
+    "\n",
+    "    ## Get category name per element\n",
+    "    category = []\n",
+    "    for dataset_name in datasets:\n",
+    "        for model_name, model_size in zip(models, model_sizes):\n",
+    "            for direction in directions:\n",
+    "                is_text = len(category_names_data)>0 and (len(category_names_direction)>0 or len(category_names_models)>0)\n",
+    "                cat_name = (dataset_name2real_name_and_reduction[dataset_name] if len(category_names_data)>0 else \"\") + (\" - \" if is_text else \"\")\n",
+    "                is_text = len(category_names_models)>0 and len(category_names_direction)>0\n",
+    "                cat_name = cat_name + (get_full_model_name(model_name, model_size) if len(category_names_models)>0 else \"\") + (\" - \" if is_text else \"\")\n",
+    "                cat_name = cat_name + (direction if len(category_names_direction)>0 else \"\")\n",
+    "                category.append(elem2cat[cat_name])\n",
+    "\n",
+    "    if colors is None and len(list_colors_per)==1:\n",
+    "        if \"dataset\" in list_colors_per:\n",
+    "            colors = plt.cm.Accent.colors\n",
+    "        elif \"direction\" in list_colors_per:\n",
+    "            colors = plt.cm.tab20.colors\n",
+    "        else:\n",
+    "            colors = plt.cm.Dark2.colors + plt.cm.tab10.colors[0:7] + plt.cm.tab10.colors[8:]\n",
+    "\n",
+    "    # Plot\n",
+    "    print(\"Plotting in parallel coordinates plot...\")\n",
+    "    n_datasets, n_directions, n_models = len(directions), len(models), len(datasets)\n",
+    "    parallelCoordinatesPlot(title = f\"Influence of {list_colors_per} on translation performances\",\n",
+    "                            N = n_datasets*n_directions*n_models,\n",
+    "                            data = data,\n",
+    "                            category = category,\n",
+    "                            category_names = category_names,\n",
+    "                            ynames = metrics_names,\n",
+    "                            colors=colors,\n",
+    "                            savepath=savepath)"
    ]
   },
   {
@@ -2403,7 +2434,7 @@
     "                    model_names, model_sizes,\n",
     "                    dataset_names, reduce_sizes,\n",
     "                    metric_names,\n",
-    "                    list_colors_per = [\"dataset\"],\n",
+    "                    list_colors_per = [\"direction\"],\n",
     "                    colors=None,\n",
     "                    savepath = \"./results/evaluations_figures/all_dataset\")"
    ]
@@ -2604,11 +2635,11 @@
     "dataset_names = [\"wnt23\", \"flores\"]\n",
     "reduce_sizes = [100, 200]\n",
     "\n",
-    "directions = [\"de-en\",\n",
-    "              \"cs-en\",\n",
-    "              \"is-en\",\n",
-    "              \"zh-en\",\n",
-    "              \"ru-en\"]\n",
+    "directions = [\"en-de\",\n",
+    "              \"en-cs\",\n",
+    "              \"en-is\",\n",
+    "              \"en-zh\",\n",
+    "              \"en-ru\",]\n",
     "\n",
     "model_names = [\"alma\",\n",
     "               \"nllb\"]\n",
@@ -2620,9 +2651,43 @@
     "                    model_names, model_sizes,\n",
     "                    dataset_names, reduce_sizes,\n",
     "                    metric_names,\n",
-    "                    list_colors_per = [\"direction\"],\n",
+    "                    list_colors_per = [\"model\", \"direction\"],\n",
     "                    colors = plt.cm.Dark2.colors,\n",
-    "                    savepath = \"./results/evaluations_figures/alma-nllb_to_en_direction\")"
+    "                    savepath = \"./results/evaluations_figures/alma-nllb_from_en_direction\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metric_names = [\"ROUGE-1\", \"ROUGE-2\", \"ROUGE-L\", \"ROUGE-Lsum\",\n",
+    "                \"BLEU\", \"SacreBLEU\", \"chrF\", \"chrF++\",\n",
+    "                \"COMET\", \"BLEURT\", \"BERTscore\", \"METEOR\"]\n",
+    "\n",
+    "dataset_names = [\"flores\"]\n",
+    "reduce_sizes = [200]\n",
+    "\n",
+    "directions = [\"en-de\", \"de-en\",\n",
+    "              \"en-cs\", \"cs-en\",\n",
+    "              \"en-is\", \"is-en\",\n",
+    "              \"en-zh\", \"zh-en\",\n",
+    "              \"en-ru\", \"ru-en\"]\n",
+    "\n",
+    "model_names = [\"alma\",\n",
+    "               \"nllb\"]\n",
+    "\n",
+    "model_sizes = [None,\n",
+    "               None]\n",
+    "\n",
+    "make_parallel_plot(directions,\n",
+    "                    model_names, model_sizes,\n",
+    "                    dataset_names, reduce_sizes,\n",
+    "                    metric_names,\n",
+    "                    list_colors_per = [\"direction\", \"model\"],\n",
+    "                    colors = plt.cm.tab20.colors[::2]+plt.cm.tab20.colors[1::2],\n",
+    "                    savepath = \"./results/evaluations_figures/alma-nllb_to_en_direction_model\")"
    ]
   },
   {
@@ -2715,7 +2780,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SNLP-project",
+   "display_name": "DLTS",
    "language": "python",
    "name": "python3"
   },
@@ -2729,7 +2794,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
