ICL and RAG end of translations part llama8-3B

--- a/03_InContextLearning.ipynb
+++ b/03_InContextLearning.ipynb
@@ -1607,7 +1607,7 @@
     "batch_size = 1\n",
     "reduce_size = 50\n",
     "\n",
-    "for number_examples in [1, 2, 3, 4, 5]:\n",
+    "for number_examples in [1, 2, 3, 4]: #More than 4 is OOM\n",
     "    generate_translation_several_datasets(directions, dataset_names, model_names, model_sizes, batch_size, reduce_size,\n",
     "                                        load_model_and_tokenizer_fn = load_model_benchmark,\n",
     "                                        get_input_targets_fn = get_input_tgt_icl_fn_Instruct(number_examples),\n",
@@ -1622,10 +1622,18 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "with open(\"./generated_translations/evaluationsICL_1examples/wnt23_llama3-3B_en-de_red-50.pkl\", \"rb\") as f:\n",
-    "    translations = pickle.load(f)\n",
-    "translations"
+    "for number_examples in [1, 2, 3, 4]:\n",
+    "    with open(f\"./generated_translations/evaluationsICL_{number_examples}examples/wnt23_llama3-3B_en-de_red-50.pkl\", \"rb\") as f:\n",
+    "        translations = pickle.load(f)\n",
+    "    print(\"First translation:\", translations[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
