--- a/04_RAG_for_ICL.ipynb
+++ b/04_RAG_for_ICL.ipynb
@@ -1724,7 +1724,8 @@
     "batch_size = 1\n",
     "reduce_size = 50\n",
     "\n",
-    "for number_examples in [1, 2, 3, 4, 5]:# Careful to use generate_translation_several_models and not generate_translation_several_datasets (several datasets are not supported by the rag input generation)\n",
+    "for number_examples in [1, 2]: # More than 2 is OOM\n",
+    "    # Careful to use generate_translation_several_models and not generate_translation_several_datasets (several datasets are not supported by the rag input generation)\n",
     "    generate_translation_several_models(directions, dataset_name, model_names, model_sizes, batch_size, reduce_size,\n",
     "                                        load_model_and_tokenizer_fn = load_model_benchmark,\n",
     "                                        get_input_targets_fn = get_input_tgt_rag_fn_Instruct(number_examples, dataset_name),\n",
@@ -1739,11 +1740,18 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "for number_examples in [1, 2, 3, 4, 5]:\n",
+    "for number_examples in [1, 2]:\n",
     "    with open(f\"./generated_translations/evaluationsRAG_{number_examples}examples/wnt23_llama3-3B_en-de_red-50.pkl\", \"rb\") as f:\n",
     "        translations = pickle.load(f)\n",
     "    print(\"First translation:\", translations[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
