add utils and eval ICL/RAG for test

--- a/04_RAG_for_ICL.ipynb
+++ b/04_RAG_for_ICL.ipynb
@@ -41,10 +41,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_beams = 5\n",
-    "max_new_tokens = 512\n",
-    "top_p = 0.9\n",
-    "temperature = 0.6"
+    "from eval_params import num_beams, temperature, max_new_tokens, top_p\n",
+    "#num_beams = 5\n",
+    "#max_new_tokens = 512\n",
+    "#top_p = 0.9\n",
+    "#temperature = 0.6"
    ]
   },
   {
@@ -786,11 +787,12 @@
     "    translation_folder = \"evaluations\" if translation_folder is None else translation_folder\n",
     "    return f\"./generated_translations/{translation_folder}/{dataset_name}_{model_name}{mod_size}_{direction}_red-{reduce_size}.pkl\"\n",
     "\n",
-    "def get_eval_filename(direction: str, dataset_name: str, model_name: str, model_size: Union[str, None], reduce_size: Union[int, None]) -> str:\n",
+    "def get_eval_filename(direction: str, dataset_name: str, model_name: str, model_size: Union[str, None], reduce_size: Union[int, None], additionnal_name: Union[str, None] = None) -> str:\n",
     "    \"\"\"\n",
     "    Generate the pkl filename where to save the computed metrics\n",
     "    \"\"\"\n",
     "    mod_size = \"-\"+model_size if model_size is not None else \"\"\n",
+    "    additionnal_name = \"\" if additionnal_name is None else additionnal_name\n",
     "    return f\"./evaluations/raw_{dataset_name}_{model_name}{mod_size}_{direction}_red-{reduce_size}.pkl\"\n",
     "\n",
     "\n",
@@ -1088,7 +1090,9 @@
    "outputs": [],
    "source": [
     "def eval_one_metric_one_model(metric_name: str, metric, directions: list[str], dataset_name: str, model_name: str, model_size: Union[str, None], reduce_size: Union[int, None],\n",
-    "                              input_and_generate_fn = get_support_fn_benchmark) -> None:\n",
+    "                              get_input_targets_fn = None,\n",
+    "                                translation_folder = None,\n",
+    "                              additionnal_name = None) -> None:\n",
     "    \"\"\"\n",
     "    Compute the evaluation accoreding to one metric of one model on several directions\n",
     "    Metric name should be in [\"ROUGE-1\", \"ROUGE-2\", \"ROUGE-L\", \"ROUGE-Lsum\", \"BLEU\", \"SacreBLEU\", \"chrF\", \"chrF++\", \"COMET\", \"BLEURT\", \"BERTscore\", \"METEOR\"]\n",
@@ -1114,7 +1118,7 @@
     "        input_language, target_language = get_inp_tgt_lang(direction)\n",
     "\n",
     "        # Loading previous eval if existing\n",
-    "        eval_filename = get_eval_filename(direction, dataset_name, model_name, model_size, reduce_size)\n",
+    "        eval_filename = get_eval_filename(direction, dataset_name, model_name, model_size, reduce_size, additionnal_name)\n",
     "        if not os.path.exists(f\"./evaluations\"):\n",
     "            os.makedirs(f\"./evaluations\")\n",
     "        if os.path.exists(eval_filename):\n",
@@ -1134,7 +1138,8 @@
     "                ds = Dataset.from_dict({f\"cs-en\": ds[\"en-cs\"][::-1]}) # Reverse list to avoid having same sentences (if reduce_size not None)\n",
     "        \n",
     "        # Extracting input & targets\n",
-    "        get_input_targets_fn, _ = input_and_generate_fn(model_name)\n",
+    "        if get_input_targets_fn is None:\n",
+    "            get_input_targets_fn, _ = get_support_fn_benchmark(model_name)\n",
     "        sources, inputs, targets = get_input_targets_fn(ds, input_language, target_language)\n",
     "        print(f\"Total number of samples: {len(sources)}\" + (\"\" if reduce_size is None else f\"; reduced to {reduce_size} (numpy seed = 42)\"))\n",
     "        if reduce_size is not None:\n",
@@ -1142,7 +1147,7 @@
     "            sources, inputs, targets = reduce_dataset(sources, inputs, targets, reduce_size)\n",
     "\n",
     "        # Loading precomputed translations\n",
-    "        translations_filename = get_translations_filename(direction, dataset_name, model_name, model_size, reduce_size)\n",
+    "        translations_filename = get_translations_filename(direction, dataset_name, model_name, model_size, reduce_size, translation_folder)\n",
     "        with open(translations_filename, \"rb\") as f:\n",
     "            translation_pred = pickle.load(f)\n",
     "        \n",
@@ -1154,16 +1159,24 @@
     "            pickle.dump(complete_eval, f, pickle.HIGHEST_PROTOCOL)\n",
     "\n",
     "# Wrapper to perform several evaluations\n",
-    "def eval_one_metric(metric_name, directions, dataset_names, model_names, model_sizes, reduce_sizes):\n",
+    "def eval_one_metric(metric_name, directions, dataset_names, model_names, model_sizes, reduce_sizes,\n",
+    "                    get_input_targets_fn = None,\n",
+    "                    translation_folder = None,\n",
+    "                    additionnal_name = None):\n",
     "    print(f\"Computing evaluations with {metric_name}...\")\n",
     "    metric = load_metric(metric_name)\n",
     "    for dataset_name, reduce_size in zip(dataset_names, reduce_sizes):\n",
     "        for model_name, model_size in zip(model_names, model_sizes):\n",
-    "            eval_one_metric_one_model(metric_name, metric, directions, dataset_name, model_name, model_size, reduce_size)\n",
+    "            eval_one_metric_one_model(metric_name, metric, directions, dataset_name, model_name, model_size, reduce_size,\n",
+    "                                      get_input_targets_fn, translation_folder, additionnal_name)\n",
     "\n",
-    "def eval_metrics(metric_names, directions, dataset_names, model_names, model_sizes, reduce_sizes):\n",
+    "def eval_metrics(metric_names, directions, dataset_names, model_names, model_sizes, reduce_sizes,\n",
+    "                 get_input_targets_fn = None,\n",
+    "                 translation_folder = None,\n",
+    "                 additionnal_name = None):\n",
     "    for metric_name in metric_names:\n",
-    "        eval_one_metric(metric_name, directions, dataset_names, model_names, model_sizes, reduce_sizes)"
+    "        eval_one_metric(metric_name, directions, dataset_names, model_names, model_sizes, reduce_sizes,\n",
+    "                        get_input_targets_fn, translation_folder, additionnal_name)"
    ]
   },
   {
@@ -1540,6 +1553,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from  utils import (\n",
+    "    generate_sorted_affinity_index,\n",
+    "    generate_translation_several_models,\n",
+    "    load_model_benchmark,\n",
+    "    translate_batched_OPT,\n",
+    "    get_sorted_affinity_index_path,\n",
+    "    get_closest_sentences,\n",
+    "    eval_metrics,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dataset_name = \"wnt23\"\n",
     "for direction in [\"en-de\", \"de-en\",\n",
     "                  \"en-cs\", \"cs-en\",\n",
@@ -1751,7 +1781,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Comput BLEURT metric alone because it is not offloaded of the GPU, need to restart the kernel...\n",
+    "metric_names = [\"bleurt\"]\n",
+    "\n",
+    "dataset_names = [\"wnt23\"]\n",
+    "reduce_sizes = [50]\n",
+    "\n",
+    "directions = [\"en-de\", \"de-en\",\n",
+    "              \"en-cs\", \"cs-en\",\n",
+    "              \"en-is\", \"is-en\",\n",
+    "              \"en-zh\", \"zh-en\",\n",
+    "              \"en-ru\", \"ru-en\"]\n",
+    "\n",
+    "model_names = [\"llama3\"]\n",
+    "model_sizes = [\"3B\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eval_metrics(metric_names, directions, dataset_names, model_names, model_sizes, reduce_sizes,\n",
+    "             get_input_targets_fn=get_input_tgt_rag_fn_Instruct(number_examples, dataset_names[0]),\n",
+    "             translation_folder=f\"evaluationsRAG_{number_examples}examples\",\n",
+    "             additionnal_name=f\"RAG_{number_examples}examples\")"
+   ]
   }
  ],
  "metadata": {
