--- a/03_InContextLearning.ipynb
+++ b/03_InContextLearning.ipynb
@@ -331,15 +331,21 @@
     "              \"en-zh\", \"zh-en\",\n",
     "              \"en-ru\", \"ru-en\"]\n",
     "\n",
-    "model_names = [#\"llama3\",\n",
+    "model_names = [\"llama3\",\n",
+    "               \"llama3\",\n",
+    "               \"llama3\",\n",
     "               \"llama3\",\n",
     "               \"llama3\"]\n",
-    "model_sizes = [#\"3B\",\n",
+    "model_sizes = [\"3B\",\n",
+    "               \"3B\",\n",
+    "               \"3B\",\n",
     "               \"3B\",\n",
     "               \"3B\"]\n",
-    "additionnal_names = [#None,\n",
-    "                     \"RAG_1examples\",\n",
-    "                     \"RAG_2examples\"]\n",
+    "additionnal_names = [None,\n",
+    "                     \"ICL_1examples\",\n",
+    "                     \"ICL_2examples\",\n",
+    "                     \"ICL_3examples\",\n",
+    "                     \"ICL_4examples\"]\n",
     "\n",
     "\n",
     "make_parallel_plot(directions,\n",
@@ -348,7 +354,7 @@
     "                    metric_names,\n",
     "                    list_colors_per = [\"model\"],\n",
     "                    additionnal_names=additionnal_names,\n",
-    "                    savepath = \"./results/evaluations_figures/RAG_eval_parrallel_model\")"
+    "                    savepath = \"./results/evaluations_figures/ICL_eval_parrallel_model\")"
    ]
   },
   {
@@ -370,30 +376,31 @@
     "              \"en-zh\", \"zh-en\",\n",
     "              \"en-ru\", \"ru-en\"]\n",
     "\n",
-    "model_names = [#\"llama3\",\n",
+    "model_names = [\"llama3\",\n",
+    "               \"llama3\",\n",
+    "               \"llama3\",\n",
     "               \"llama3\",\n",
     "               \"llama3\"]\n",
-    "model_sizes = [#\"3B\",\n",
+    "model_sizes = [\"3B\",\n",
+    "               \"3B\",\n",
+    "               \"3B\",\n",
     "               \"3B\",\n",
     "               \"3B\"]\n",
-    "additionnal_names = [#None,\n",
-    "                     \"RAG_1examples\",\n",
-    "                     \"RAG_2examples\"]\n",
+    "additionnal_names = [None,\n",
+    "                     \"ICL_1examples\",\n",
+    "                     \"ICL_2examples\",\n",
+    "                     \"ICL_3examples\",\n",
+    "                     \"ICL_4examples\"]\n",
     "\n",
     "make_bar_plot(directions,\n",
     "                model_names, model_sizes,\n",
     "                dataset_name, reduce_size,\n",
     "                metric_names,\n",
     "                additionnal_names=additionnal_names,\n",
-    "                savepath = \"./results/evaluations_figures/barplot_all_models\")"
+    "                width=0.15,\n",
+    "                cmap=\"rainbow\",\n",
+    "                savepath = \"./results/evaluations_figures/barplot_all_models_ICL\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -405,9 +412,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SNLP environment",
+   "display_name": "SNLP-project",
    "language": "python",
-   "name": "snlp-project"
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
