--- a/04_RAG_for_ICL.ipynb
+++ b/04_RAG_for_ICL.ipynb
@@ -342,13 +342,13 @@
     "              \"en-zh\", \"zh-en\",\n",
     "              \"en-ru\", \"ru-en\"]\n",
     "\n",
-    "model_names = [#\"llama3\",\n",
+    "model_names = [\"llama3\",\n",
     "               \"llama3\",\n",
     "               \"llama3\"]\n",
-    "model_sizes = [#\"3B\",\n",
+    "model_sizes = [\"3B\",\n",
     "               \"3B\",\n",
     "               \"3B\"]\n",
-    "additionnal_names = [#None,\n",
+    "additionnal_names = [None,\n",
     "                     \"RAG_1examples\",\n",
     "                     \"RAG_2examples\"]\n",
     "\n",
@@ -381,13 +381,13 @@
     "              \"en-zh\", \"zh-en\",\n",
     "              \"en-ru\", \"ru-en\"]\n",
     "\n",
-    "model_names = [#\"llama3\",\n",
+    "model_names = [\"llama3\",\n",
     "               \"llama3\",\n",
     "               \"llama3\"]\n",
-    "model_sizes = [#\"3B\",\n",
+    "model_sizes = [\"3B\",\n",
     "               \"3B\",\n",
     "               \"3B\"]\n",
-    "additionnal_names = [#None,\n",
+    "additionnal_names = [None,\n",
     "                     \"RAG_1examples\",\n",
     "                     \"RAG_2examples\"]\n",
     "\n",
@@ -396,7 +396,9 @@
     "                dataset_name, reduce_size,\n",
     "                metric_names,\n",
     "                additionnal_names=additionnal_names,\n",
-    "                savepath = \"./results/evaluations_figures/barplot_all_models\")"
+    "                width=0.2,\n",
+    "                cmap=\"rainbow\",\n",
+    "                savepath = \"./results/evaluations_figures/barplot_all_models_RAG\")"
    ]
   },
   {
@@ -409,9 +411,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SNLP environment",
+   "display_name": "SNLP-project",
    "language": "python",
-   "name": "snlp-project"
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
