Generate translation different directions with new finetuned model

--- a/02_finetune_for_translation.ipynb
+++ b/02_finetune_for_translation.ipynb
@@ -22,16 +22,16 @@
      "text": [
       "/opt/conda/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2025-03-17 19:33:03.643035: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-03-17 19:33:03.662992: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-03-17 22:29:32.043043: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-03-17 22:29:32.064099: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1742239983.688008    5892 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1742239983.694941    5892 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "W0000 00:00:1742239983.712534    5892 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1742239983.712564    5892 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1742239983.712566    5892 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1742239983.712568    5892 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "2025-03-17 19:33:03.718091: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1742250572.086593    6814 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1742250572.093399    6814 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1742250572.110555    6814 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1742250572.110572    6814 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1742250572.110575    6814 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1742250572.110576    6814 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "2025-03-17 22:29:32.118559: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -2262,9 +2262,9 @@
     }
    ],
    "source": [
-    "model_fn_path = \"./parallelData_finetuned-Llama3.2-3B\" \n",
+    "model_fn_path = \"./results/parallelData_finetuned-Llama3.2-3B\" \n",
     "\n",
-    "# Load the finetuned model\n",
+    "# Load the base model\n",
     "compute_dtype = getattr(torch, \"float16\")\n",
     "bnb_config = BitsAndBytesConfig(\n",
     "        load_in_4bit=True,\n",
@@ -2272,14 +2272,12 @@
     "        bnb_4bit_compute_dtype=compute_dtype,\n",
     "        bnb_4bit_use_double_quant=False,\n",
     "    )\n",
+    "base_model = AutoModelForCausalLM.from_pretrained(\"meta-llama/Llama-3.2-3B\",device_map=\"auto\", quantization_config=bnb_config)\n",
     "\n",
-    "ft_model = AutoPeftModelForCausalLM.from_pretrained(\n",
-    "    model_fn_path,\n",
-    "    device_map=\"auto\",\n",
-    "    torch_dtype=torch.float16,\n",
-    "    quantization_config=bnb_config,\n",
-    "    is_trainable=True,\n",
-    ")\n",
+    "# Load the LoRA model weights\n",
+    "ft_model = PeftModel.from_pretrained(base_model, model_fn_path, torch_dtype=torch.float16)\n",
+    "# Merge LoRA weights into the base model\n",
+    "ft_model = ft_model.merge_and_unload()\n",
     "\n",
     "# Load the tokenizer\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"meta-llama/Llama-3.2-3B\")\n",
